# korfballstats

./: .gitignore  README.md  app.py  audiotest.py  fieldui.py  pyproject.toml
backend/: auth.py  db.py  models.py  schema.py
backend/crud/: event.py  match.py  player.py  team.py
backend/routers/: action.py  auth.py  event.py  match.py  player.py  playtime.py  team.py
backend/services/: action_events.py  active_players_events.py  collaboration.py  join_decision_events.py  join_events.py  match_service.py
frontend/: api.py  layout.py
frontend/pages/: analysis.py  events.py  home.py  live.py  live_controller.py  login.py  matches.py  teams.py
sandbow/: uitest.py
scripts/: bootstrap_db.py  create_user.py
tests/: test_match_service.py  test_password_validation.py
