[project]
name = "korfballstats"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.121.2",
    "fastapi-users[sqlalchemy]>=15.0.1",
    "nicegui>=2.24.2",
    "passlib>=1.7.4",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.2",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.33.0",
]
